--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -81,7 +81,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center_vertical"
-        android:layout_marginTop="220dp"
+        android:layout_marginTop="250dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -96,6 +96,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:orientation="vertical">
 
                 <FrameLayout
@@ -112,14 +113,14 @@
                         android:layout_marginTop="10dp"
                         android:autofillHints=""
                         android:background="@drawable/caixa_edittxt"
+                        android:cursorVisible="true"
                         android:drawablePadding="8dp"
                         android:imeOptions="actionDone"
                         android:inputType="textEmailAddress"
                         android:paddingHorizontal="10dp"
                         android:paddingTop="30dp"
                         android:paddingBottom="7dp"
-                        android:textCursorDrawable="@color/primario"
-                        android:cursorVisible="true"
+                        android:textCursorDrawable="@drawable/cursor"
                         android:textSize="18sp" />
 
                     <TextView
@@ -158,16 +159,15 @@
                             android:layout_marginHorizontal="40dp"
                             android:layout_marginTop="10dp"
                             android:background="@drawable/caixa_edittxt"
-                            android:paddingTop="30dp"
-                            android:paddingBottom="7dp"
-                            android:hint=""
                             android:gravity="bottom|start"
-                            android:paddingStart="11dp"
-                            android:paddingEnd="5dp"
+                            android:hint=""
                             android:imeOptions="actionDone"
                             android:inputType="textPassword"
-                            android:textSize="18sp"
-                            />
+                            android:paddingStart="11dp"
+                            android:paddingTop="30dp"
+                            android:paddingEnd="5dp"
+                            android:paddingBottom="7dp"
+                            android:textSize="18sp" />
                     </com.google.android.material.textfield.TextInputLayout>
 
 
