--- a/app/src/main/res/layout/fragment_cadastro.xml
+++ b/app/src/main/res/layout/fragment_cadastro.xml
@@ -5,66 +5,84 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Cadastro">
-    <ImageView
-        android:id="@+id/florMenor"
-        android:layout_width="86dp"
-        android:layout_height="122dp"
-        android:layout_marginTop="80dp"
-        android:alpha="0.4"
-        android:rotation="-55"
-        android:layout_marginStart="20dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/flor" />
 
-    <ImageView
-        android:id="@+id/florMaior"
-        android:layout_width="139dp"
-        android:layout_height="200dp"
-        android:alpha="0.4"
-        android:rotation="36"
-        android:layout_marginTop="7dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/flor" />
-
-    <ImageView
-        android:id="@+id/logo"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
-        android:layout_marginTop="30dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/logo" />
-
-    <TextView
-        android:id="@+id/titulo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="30dp"
-        android:layout_marginTop="5dp"
-        android:text="Seja Bem-Vindo"
-        android:textColor="#36939a"
-        android:textSize="27sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logo" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
 
 
-    <TextView
-        android:id="@+id/subtitulo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:text="Cadastra-se para continuar"
-        android:textColor="#36939a"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titulo" />
+        <ImageView
+            android:id="@+id/logo"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_marginTop="30dp"
+            app:srcCompat="@drawable/logo" />
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/titulo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginHorizontal="30dp"
+            android:layout_marginTop="130dp"
+            android:text="Seja Bem-Vindo"
+            android:textColor="#36939a"
+            android:textSize="30sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/subtitulo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="5dp"
+            android:text="Cadastra-se para continuar"
+            android:textColor="#36939a"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/florMenor"
+            android:layout_width="86dp"
+            android:layout_height="122dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="158dp"
+            android:alpha="0.4"
+            android:rotation="-55"
+            app:srcCompat="@drawable/flor" />
+
+        <ImageView
+            android:id="@+id/florMaior"
+            android:layout_width="0dp"
+            android:layout_height="200dp"
+            android:layout_marginStart="180dp"
+            android:layout_marginTop="87dp"
+            android:layout_weight="1"
+            android:alpha="0.4"
+            android:rotation="36"
+            app:srcCompat="@drawable/flor" />
+
+
+    </LinearLayout>
 
 
     <LinearLayout
@@ -79,8 +97,10 @@
             android:fillViewport="true">
 
             <LinearLayout
+                android:id="@+id/linearLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:layout_marginTop="160dp"
                 android:orientation="vertical">
 
@@ -92,17 +112,21 @@
                     <EditText
                         android:id="@+id/email"
                         android:layout_width="match_parent"
-                        android:layout_height="55dp"
+                        android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:layout_marginHorizontal="40dp"
                         android:layout_marginTop="10dp"
                         android:autofillHints=""
                         android:background="@drawable/caixa_edittxt"
+                        android:cursorVisible="true"
                         android:drawablePadding="8dp"
                         android:imeOptions="actionDone"
                         android:inputType="textEmailAddress"
-                        android:paddingHorizontal="8dp"
-                        android:paddingTop="20dp"
+
+                        android:paddingHorizontal="10dp"
+                        android:paddingTop="30dp"
+                        android:paddingBottom="7dp"
+                        android:textCursorDrawable="@drawable/cursor"
                         android:textSize="14sp" />
 
                     <TextView
@@ -114,7 +138,7 @@
                         android:layout_marginTop="15dp"
                         android:text="Digite um email:"
                         android:textColor="#36939a"
-                        android:textSize="12sp"
+                        android:textSize="14sp"
                         android:textStyle="bold" />
                 </FrameLayout>
 
@@ -126,17 +150,21 @@
                     <EditText
                         android:id="@+id/nome"
                         android:layout_width="match_parent"
-                        android:layout_height="55dp"
+                        android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:layout_marginHorizontal="40dp"
                         android:layout_marginTop="10dp"
                         android:autofillHints=""
                         android:background="@drawable/caixa_edittxt"
+                        android:cursorVisible="true"
                         android:drawablePadding="8dp"
                         android:imeOptions="actionDone"
                         android:inputType="textEmailAddress"
-                        android:paddingHorizontal="8dp"
-                        android:paddingTop="20dp"
+
+                        android:paddingHorizontal="10dp"
+                        android:paddingTop="30dp"
+                        android:paddingBottom="7dp"
+                        android:textCursorDrawable="@drawable/cursor"
                         android:textSize="14sp"
                         tools:ignore="LabelFor" />
 
@@ -149,7 +177,7 @@
                         android:layout_marginTop="15dp"
                         android:text="Digite seu nome:"
                         android:textColor="#36939a"
-                        android:textSize="12sp"
+                        android:textSize="14sp"
                         android:textStyle="bold" />
                 </FrameLayout>
 
@@ -161,17 +189,21 @@
                     <EditText
                         android:id="@+id/cpf"
                         android:layout_width="match_parent"
-                        android:layout_height="55dp"
+                        android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:layout_marginHorizontal="40dp"
                         android:layout_marginTop="10dp"
                         android:autofillHints=""
                         android:background="@drawable/caixa_edittxt"
+                        android:cursorVisible="true"
                         android:drawablePadding="8dp"
                         android:imeOptions="actionDone"
                         android:inputType="textEmailAddress"
-                        android:paddingHorizontal="8dp"
-                        android:paddingTop="20dp"
+                        android:paddingHorizontal="10dp"
+                        android:paddingTop="30dp"
+                        android:paddingBottom="7dp"
+                        android:textCursorDrawable="@drawable/cursor"
+
                         android:textSize="14sp"
                         tools:ignore="LabelFor" />
 
@@ -184,7 +216,7 @@
                         android:layout_marginTop="15dp"
                         android:text="Digite seu CPF:"
                         android:textColor="#36939a"
-                        android:textSize="12sp"
+                        android:textSize="14sp"
                         android:textStyle="bold" />
 
                 </FrameLayout>
@@ -207,7 +239,7 @@
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/senha"
                             android:layout_width="match_parent"
-                            android:layout_height="57dp"
+                            android:layout_height="wrap_content"
                             android:layout_gravity="center_horizontal"
                             android:layout_marginHorizontal="40dp"
                             android:layout_marginTop="10dp"
@@ -216,7 +248,10 @@
                             android:hint=""
                             android:imeOptions="actionDone"
                             android:inputType="textPassword"
-                            android:padding="8dp" />
+                            android:paddingStart="11dp"
+                            android:paddingTop="30dp"
+                            android:paddingEnd="5dp"
+                            android:paddingBottom="7dp" />
                     </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -229,7 +264,7 @@
                         android:layout_marginTop="10dp"
                         android:text="Crie uma senha(min. 8 caracteres):"
                         android:textColor="#36939a"
-                        android:textSize="12sp"
+                        android:textSize="14sp"
                         android:textStyle="bold" />
 
                 </FrameLayout>
@@ -252,7 +287,7 @@
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/confirmaSenha"
                             android:layout_width="match_parent"
-                            android:layout_height="57dp"
+                            android:layout_height="wrap_content"
                             android:layout_gravity="center_horizontal"
                             android:layout_marginHorizontal="40dp"
                             android:layout_marginTop="10dp"
@@ -261,7 +296,10 @@
                             android:hint=""
                             android:imeOptions="actionDone"
                             android:inputType="textPassword"
-                            android:padding="8dp" />
+                            android:paddingStart="11dp"
+                            android:paddingTop="30dp"
+                            android:paddingEnd="5dp"
+                            android:paddingBottom="7dp" />
                     </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -274,7 +312,7 @@
                         android:layout_marginTop="10dp"
                         android:text="Confirme a senha:"
                         android:textColor="#36939a"
-                        android:textSize="12sp"
+                        android:textSize="14sp"
                         android:textStyle="bold" />
 
                 </FrameLayout>
