--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,239 +3,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
-    style="@style/fundo"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#6EB8BA"
     android:fitsSystemWindows="true"
-    tools:context=".Home">
+    tools:context=".MainActivity">
 
-    <ImageView
-        android:id="@+id/florMenor"
-        android:layout_width="86dp"
-        android:layout_height="122dp"
-        android:rotation="-36"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/florMaior"
-        app:layout_constraintHorizontal_bias="0.887"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titulo"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/flor" />
-
-    <ImageView
-        android:id="@+id/florMaior"
-        android:layout_width="159dp"
-        android:layout_height="220dp"
-        android:layout_marginVertical="2dp"
-        android:layout_marginEnd="16dp"
-        android:rotation="36"
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragmentContainerView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.095"
-        app:srcCompat="@drawable/flor" />
-
-    <ImageView
-        android:id="@+id/logo"
-        android:layout_width="54dp"
-        android:layout_height="52dp"
-        android:layout_marginTop="40dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.074"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/logo" />
-
-    <TextView
-        android:id="@+id/titulo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:text="Seja Bem-Vindo"
-        android:textColor="#FFFFFF"
-        android:textSize="32dp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.141"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logo" />
-
-    <TextView
-        android:id="@+id/subtitulo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:text="Faça login para continuar"
-        android:textColor="#FFFFFF"
-        android:textSize="16dp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.113"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titulo" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
-    <LinearLayout
-        android:id="@+id/card"
-        style="@style/fundo"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center_vertical"
-        android:layout_marginTop="250dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        tools:layout_editor_absoluteX="-12dp">
-
-
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:orientation="vertical">
-
-                <FrameLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="30dp">
-
-                    <EditText
-                        android:id="@+id/email"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginHorizontal="40dp"
-                        android:layout_marginTop="10dp"
-                        android:autofillHints=""
-                        android:background="@drawable/caixa_edittxt"
-                        android:cursorVisible="true"
-                        android:drawablePadding="8dp"
-                        android:imeOptions="actionDone"
-                        android:inputType="textEmailAddress"
-                        android:paddingHorizontal="10dp"
-                        android:paddingTop="30dp"
-                        android:paddingBottom="7dp"
-                        android:textCursorDrawable="@drawable/cursor"
-                        android:textSize="18sp" />
-
-                    <TextView
-                        android:id="@+id/emailEscrita"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="35dp"
-                        android:layout_marginStart="50dp"
-                        android:layout_marginTop="15dp"
-                        android:text="Email:"
-                        android:textColor="#36939a"
-                        android:textSize="14sp"
-                        android:textStyle="bold" />
-                </FrameLayout>
-
-
-                <FrameLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp">
-
-
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:textColorHint="#99959B"
-                        app:hintAnimationEnabled="false"
-                        app:passwordToggleEnabled="true">
-
-
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/senha"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_horizontal"
-                            android:layout_marginHorizontal="40dp"
-                            android:layout_marginTop="10dp"
-                            android:background="@drawable/caixa_edittxt"
-                            android:gravity="bottom|start"
-                            android:hint=""
-                            android:imeOptions="actionDone"
-                            android:inputType="textPassword"
-                            android:paddingStart="11dp"
-                            android:paddingTop="30dp"
-                            android:paddingEnd="5dp"
-                            android:paddingBottom="7dp"
-                            android:textSize="18sp" />
-                    </com.google.android.material.textfield.TextInputLayout>
-
-
-                    <TextView
-                        android:id="@+id/senhaEscrita"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="35dp"
-                        android:layout_marginStart="50dp"
-                        android:layout_marginTop="10dp"
-                        android:text="Senha:"
-                        android:textColor="#36939a"
-                        android:textSize="14sp"
-                        android:textStyle="bold" />
-
-                </FrameLayout>
-
-
-                <Button
-                    android:id="@+id/botaoLogin"
-                    android:layout_width="match_parent"
-                    android:layout_height="60dp"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginHorizontal="40dp"
-                    android:layout_marginTop="30dp"
-                    android:backgroundTint="#36939a"
-                    android:text="Logar"
-                    android:textSize="18sp"
-                    android:visibility="visible"
-                    app:cornerRadius="20dp" />
-
-                <TextView
-                    android:id="@+id/linkLogin"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginHorizontal="35dp"
-                    android:layout_marginTop="20dp"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:text="Não possui cadastro? Clique aqui para se cadastrar"
-                    android:textAlignment="center"
-                    android:textColor="#36939a"
-                    android:textSize="14sp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/esqueceuLogin"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginHorizontal="35dp"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginBottom="60dp"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:text="Esqueceu a senha?"
-                    android:textAlignment="center"
-                    android:textColor="#36939a"
-                    android:textSize="14sp"
-                    android:textStyle="bold" />
-
-
-            </LinearLayout>
-        </ScrollView>
-
-
-    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
